2018-09-12  Richard Biener  <rguenther@suse.de>

PR tree-optimization/87280
	* tree-ssa-sccvn.c (process_bb): Handle the case of executable
	edge but unreachable target.
	(do_rpo_vn): For conservatively handling a PHI only mark
	the backedge executable but not the block reachable.

	* gcc.dg/torture/pr87280.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@264241 138bc75d-0d04-0410-961f-82ee72b054a4